<resources>
    <string name="app_name">TPA2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cats">Cats</string>
    <string name="add_cats">Add cats</string>
    <string name="name">name</string>
    <string name="raze">Raze</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
</resources>